[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Sprites/virus.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Objects/Enemy_Virus.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Objects/Unit_Sprite.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/SFX/virus_sfx.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Objects/AnimationManager.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/SFX/hit_sfx.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/SFX/tp_sfx.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/SFX/tp_out_sfx.wav" type="AudioStream" id=10]

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true

[sub_resource type="Animation" id=7]
resource_name = "Attack"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_hit"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Damage_taken"
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.47451, 0.47451, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Despawn"
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -23 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("PathFollow2D/Sprite:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("PathFollow2D/Sprite:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=6]
resource_name = "End_turn"
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.6, 0.6, 0.6, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathFollow2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PathFollow2D/Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PathFollow2D/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PathFollow2D/Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -23 ) ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("PathFollow2D/Sprite:scale:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("PathFollow2D/Sprite:scale:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "Spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 4 ), Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathFollow2D/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -23 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ne_walk"
length = 0.666667
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7, 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "nw_walk"
length = 0.666667
loop = true
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4, 3 ]
}

[node name="Enemy_Virus" type="Path2D" groups=["Enemies"]]
curve = null
script = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
loop = false

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
material = SubResource( 10 )
position = Vector2( 0, -23 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PathFollow2D/Sprite"]
root_node = NodePath("../../..")
autoplay = "Spawn"
anims/Attack = SubResource( 7 )
anims/Damage_taken = SubResource( 5 )
anims/Despawn = SubResource( 9 )
anims/End_turn = SubResource( 6 )
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/Spawn = SubResource( 8 )
anims/ne_walk = SubResource( 3 )
anims/nw_walk = SubResource( 4 )
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Hit_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Attack_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Spawn_SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Despawn_SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
